--- a/BLOGPOSTS/jsprojects/jsprojects.css
+++ b/BLOGPOSTS/jsprojects/jsprojects.css
@@ -4,6 +4,10 @@
     display: flex;
     flex-direction: column;
 }
+    .pge-showcase {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
 
 .jsproj-title {
     font-family: Lexend, Roboto, sans-serif;
@@ -56,6 +60,13 @@
         grid-auto-flow: row;
     }
 
+    .jsproj-showcase {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+    .jsproj-grid-item {
+        width: 25em;
+    }
 }
 
 
